--- a/RouteMe/Base.lproj/Main.storyboard
+++ b/RouteMe/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     <action selector="driveWalkSegmentedControlChanged:" destination="vrz-uA-nUK" eventType="valueChanged" id="DJK-em-fg3"/>
                                 </connections>
                             </segmentedControl>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="My location" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CU9-2d-3X7">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="My location" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="CU9-2d-3X7" userLabel="start location text field">
                                 <rect key="frame" x="51" y="117" width="219" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -51,7 +51,7 @@
                                     <outlet property="delegate" destination="vrz-uA-nUK" id="aaF-YG-Z9w"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="55E-D6-oeW">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Destination" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="55E-D6-oeW" userLabel="destination text field">
                                 <rect key="frame" x="51" y="170" width="219" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -60,7 +60,7 @@
                                     <outlet property="delegate" destination="vrz-uA-nUK" id="xVH-W2-HGP"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Keyword" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Pz-u9-efH">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Keyword" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Pz-u9-efH" userLabel="keyword text field">
                                 <rect key="frame" x="51" y="238" width="219" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -83,7 +83,7 @@
                                 <rect key="frame" x="23" y="122" width="20" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="p5j-dO-6hM">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="p5j-dO-6hM" userLabel="destinations table view">
                                 <rect key="frame" x="0.0" y="201" width="320" height="135"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -92,6 +92,20 @@
                                     <outlet property="delegate" destination="vrz-uA-nUK" id="KJ7-gL-cBS"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="✔︎" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EgF-C7-Cs5" userLabel="start location check image">
+                                <rect key="frame" x="272" y="121" width="41" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" red="0.28255246820000002" green="0.81933092949999997" blue="0.2503516543" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="✔︎" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cgv-ZI-2Lx" userLabel="end location check image">
+                                <rect key="frame" x="272" y="174" width="41" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" red="0.28255246820000002" green="0.81933092949999997" blue="0.2503516543" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -101,11 +115,13 @@
                     <connections>
                         <outlet property="destinationsTable" destination="p5j-dO-6hM" id="X24-DP-nId"/>
                         <outlet property="driveWalkSegmentedControl" destination="el8-zn-RIt" id="bHz-y6-RkU"/>
+                        <outlet property="endLocationCheckImage" destination="Cgv-ZI-2Lx" id="V6B-xj-5WI"/>
                         <outlet property="goButton" destination="uDa-na-Gwi" id="vsa-an-Cap"/>
                         <outlet property="keywordField" destination="0Pz-u9-efH" id="le1-gh-adt"/>
                         <outlet property="locationAI" destination="iXP-6M-ZFC" id="M4A-Ul-Vbk"/>
                         <outlet property="myDestinationField" destination="55E-D6-oeW" id="W6o-9I-J7m"/>
                         <outlet property="myLocationField" destination="CU9-2d-3X7" id="LmU-G9-iHp"/>
+                        <outlet property="startLocationCheckImage" destination="EgF-C7-Cs5" id="wwg-zj-UW6"/>
                         <segue destination="vXZ-lx-hvc" kind="push" identifier="homeToMapSegue" id="Y26-J3-wmJ"/>
                     </connections>
                 </viewController>
